--- a/DesafioTecnico.Softplan.API.Juros/appsettings.json
+++ b/DesafioTecnico.Softplan.API.Juros/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=DesafioTecnicoSoftPlan;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=#"
   },
   "AllowedHosts": "*"
 }
